--- a/20240412.slides.html
+++ b/20240412.slides.html
@@ -8525,7 +8525,7 @@ main {
 <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain" tabindex="0">
 <pre>         performer                             title  wks_on_chart
-25563  The Beatles                   <a href="#" onclick="handleLinkClick2()">Twist And Shout</a>            26
+25563  The Beatles                   <a href="#!" onclick="handleLinkClick2()">Twist And Shout</a>            26
 25525  The Beatles                          Hey Jude            19
 25514  The Beatles           Come Together/Something            16
 25522  The Beatles       Got To Get You Into My Life            16
