--- a/20240412.slides.html
+++ b/20240412.slides.html
@@ -30,7 +30,7 @@ categories: jekyll update
             const url = `https://www.youtube.com/embed/${videoId}`;
             const features = 'width=800,height=600,resizable=yes,scrollbars=yes';
 
-            window.open(url, 'YouTubePopup', features);
+            window.open(url2, 'YouTubePopup', features);
         }
         
         function handleLinkClick2() {
@@ -46,12 +46,12 @@ categories: jekyll update
             const url = `https://www.youtube.com/embed/${videoId}`;
             const features = 'width=800,height=600,resizable=yes,scrollbars=yes';
 
-            window.open(url, 'YouTubePopup', features);
+            window.open(url3, 'YouTubePopup', features);
         }
         
         function handleLinkClick3() {
             // Your custom JavaScript code here
-            openYouTubePopup2();
+            openYouTubePopup3();
             // alert("Anchor link clicked! Execute your ACH-related logic.");
             // You can replace the alert with any desired action.
         }
