--- a/20240412.slides.html
+++ b/20240412.slides.html
@@ -30,7 +30,7 @@ categories: jekyll update
             const url = `https://www.youtube.com/embed/${videoId}`;
             const features = 'width=800,height=600,resizable=yes,scrollbars=yes';
 
-            window.open(url2, 'YouTubePopup', features);
+            window.open(url, 'YouTubePopup', features);
         }
         
         function handleLinkClick2() {
@@ -46,7 +46,7 @@ categories: jekyll update
             const url = `https://www.youtube.com/embed/${videoId}`;
             const features = 'width=800,height=600,resizable=yes,scrollbars=yes';
 
-            window.open(url3, 'YouTubePopup', features);
+            window.open(url, 'YouTubePopup', features);
         }
         
         function handleLinkClick3() {
