--- a/index.html
+++ b/index.html
@@ -7538,7 +7538,7 @@ a.anchor-link {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>Beta Slides Version:
-Read more <a href="./20240412.slides.html">here</a> # It works!</p>
+Read more <a href="./20240413_slides.html">here</a> It works!</p>
 </div>
 </div>
 </div>
